# aion26

./: .gitignore  CLEANUP_SUMMARY.md  CONVERGENCE_FAILURE_ANALYSIS.md  CRITICAL_FIXES_APPLIED.md  DIVERGENCE_FIX_VALIDATION.md  FIXES_GUI_RIVER_TRAINING.md  GUI_COMPLETION_SUMMARY.md  GUI_FIXES_COMPLETE.md  GUI_MATRIX_VIEW_COMPLETION.md  LOG_ANALYSIS_RIVER_TRAINING.md  MATRIX_VIEW_FEATURE.md  OPTION_A_COMPLETE.md  PROJECT_FILE_INVENTORY.md  PROJECT_STATUS.md  README.md  RIVER_HOLDEM_IMPLEMENTATION.md  RIVER_HOLDEM_MATRIX_VIEW.md  RIVER_TRAINING_INFRASTRUCTURE.md  SPECS.md  TESTING_COMPLETION_REPORT.md  VR_DDCFR_COMPLETION.md  pyproject.toml  run_webapp.bat  test_import.py
configs/: kuhn_vanilla.yaml  leduc_vr_ddcfr.yaml
docs/: CALLING_STATION_BUG_ANALYSIS.md  EXPLOITABILITY_BUG_ANALYSIS.md  EXTERNAL_SAMPLING_MCCFR.md  FLOP_ABSTRACTION_PLAN.md  GUI_VISUALIZER.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE_6_INFERENCE.md  PHASE_6_RUST_DRIVER.md  README.md  TRAINING_ANALYSIS_20260114.md  TRAINING_ISSUE_ANALYSIS_20260113.md  TRAINING_RUN_ANALYSIS_20260112.md  WEBAPP_ENHANCEMENT_PLAN.md  WEBAPP_PRO_QUICKSTART.md  WIN_RATE_METRICS.md
scripts/: analyze_station_losses.py  auto_evaluate.py  bench_rust.py  bench_tabular.py  bench_tabular_fixed.py  benchmark_traversal.py  build_rust.sh  compare_vr_vs_standard.py  debug_calling_station.py  debug_hand_logic.py  evaluate_final.py  inspect_strategy.py  launch_gui.py  launch_gui_debug.sh  monitor_training.py  profile_perf.py  profile_training.py  quick_pdcfr_comparison.py  solve_river.py  test_baselines.py  test_everything_final.py  test_gui.py  test_gui_training.py  test_heatmap_gui.py  test_matrix_gui.py  test_openspiel_cfr.py  test_river.py  train_full_holdem.py  train_kuhn.py  train_leduc.py  train_phase6.py  train_phase7.py  train_river.py  train_visual.py  train_webapp.py  train_webapp_enhanced.py  train_webapp_pro.py  train_with_monitoring.py  (+1 more)
src/aion26_rust/: Cargo.toml  pyproject.toml
src/aion26_rust/src/: evaluator.rs  flop_abstraction.rs  game_full.rs  io.rs  io_full.rs  lib.rs  parallel_trainer.rs  parallel_trainer_full.rs  river.rs  solver_db.rs  tabular.rs  trainer.rs  trainer_v2.rs
(+54 files in other folders)
