[package]
name = "aion26_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aion26_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rand = "0.8"
itertools = "0.12"
rayon = "1.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
